AC_PREREQ([2.69])
AC_INIT([havocpoc],
         [1.0.0],
         [kyle@tyrfingr.is],
         [],
         [https://tyrfingr.is/projects/havoc/])
AM_INIT_AUTOMAKE([1.11 foreign])

AC_CONFIG_SRCDIR([src/havoc.c])
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])
AC_CHECK_HEADERS

AC_PROG_CC
AC_PROG_INSTALL

AC_OUTPUT
